--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -19,15 +19,8 @@
 
 
 
-
-
     <!-- The div that holds our map -->
     <div id="mapid"></div>
-
-
-
-
-
 
 
 
@@ -40,10 +33,13 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
     <!-- Our JavaScript -->
+    <script type="text/javascript" src="cities.js"></script>
+
     <script type="text/javascript" src="static/js/logic.js"></script>
+    <!-- <script type="text/javascript" src="practice.js"></script> -->
+
 
 
 </body>
-
 
 </html>
